@@ -1,3 +1,9 @@
+2005-01-10  Eric Botcazou  <ebotcazou@libertysurf.fr>
+
+	* elf64-sparc.c (sparc64_elf_adjust_dynamic_symbol): When linking a
+	non-shared object, do not reserve space in .plt and .rela.plt for
+	regular symbols neither defined nor referenced in shared objects.
+
 2005-01-09  Eric Botcazou  <ebotcazou@libertysurf.fr>
 
 	* elf32-sparc.c (elf32_sparc_link_hash_table_create): Use bfd_zmalloc
